feat: complete Lean 4 type checker with CI
- Full type checking of Lean 4 Init library (~50k declarations in ~73s)
- Native Nat/String literal operations
- Proof irrelevance and eta expansion
- Recursor and quotient type support
- CI workflow to test against Lean 4 nightly

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>